fix(controller): handle null filename in getBackgroundImage method
Signed-off-by: Balázs Szücs <bszucs1209@gmail.com>